Wrap all content in correctly sized `<main>`
By default, the `<main>` element fills to fit the viewport height.

--- a/static/css/challenges.css
+++ b/static/css/challenges.css
@@ -1,10 +1,5 @@
-body {
-    display: flex;
-    flex-direction: column;
-}
-
 /* Andrew cool css */
-#challenge-main {
+body > main {
     display: flex;
     flex-direction: row-reverse;
     flex-wrap: wrap;
@@ -12,7 +7,6 @@ body {
     height: 100%;
     justify-content: center;
     padding: 0;
-    flex: 1;
 }
 
 /* Section styling */
