--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -29,6 +29,8 @@ body {
     line-height: 1.6;
     color: var(--fg-color);
     background-color: var(--bg-color);
+    display: flex;
+    flex-direction: column;
 }
 
 
@@ -113,7 +115,8 @@ details > summary {
 }
 
 
-main {
+body > main {
+    flex: 1;
     padding: 1em;
 }
 
